# local-rag

./: .env.example  .gitignore  .pycharm.ai.md  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  start-servers.sh
.github/workflows/: ci.yml  security.yml
docs/: SECURITY_AUDIT_2025-11-28.md
docs/phases/: PHASE_0_SETUP.md  PHASE_1_DOMAIN.md  PHASE_2_PARSING.md  PHASE_3_VECTORS.md  PHASE_4_LLM.md  PHASE_5_SERVICES.md  PHASE_6_API.md  PHASE_7_FRONTEND.md  PHASE_8_POLISH.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  style.css
frontend/src/components/: BookList.vue  ChatInterface.vue  ChatMessage.vue  ConfirmDialog.vue  FileUpload.vue  SourceCitation.vue
frontend/src/composables/: useApi.ts
frontend/src/types/: index.ts
src/api/: __init__.py  config.py  dependencies.py  exception_handlers.py  main.py
src/api/middleware/: __init__.py  security_headers.py
src/api/routes/: __init__.py  books.py  chat.py  chat_stream.py  health.py  models.py
src/api/schemas/: __init__.py  books.py  chat.py
src/application/: __init__.py
src/application/dto/: __init__.py  responses.py
src/application/services/: __init__.py  ingestion_service.py  query_service.py  session_manager.py
src/domain/: exceptions.py
src/domain/entities/: __init__.py  chunk.py  query.py
src/domain/interfaces/: __init__.py  embedding_service.py  llm_client.py  vector_store.py
src/embeddings/: __init__.py  ollama_embedder.py  sentence_transformer.py
src/infrastructure/embeddings/: __init__.py  ollama_embedder.py  sentence_transformer.py
src/infrastructure/llm/: __init__.py  ollama_client.py  prompts.py
src/infrastructure/parsers/: __init__.py  chunker.py  epub_parser.py  factory.py  html_parser.py  markdown_parser.py  pdf_parser.py  rst_parser.py  text_parser.py  validator.py
src/infrastructure/vectorstore/: __init__.py  chroma_store.py
src/llm/: __init__.py  ollama_client.py  prompts.py
src/mcp/: __init__.py  aegis_client.py  base_client.py  manager.py  models.py
src/mcp/adapters/: __init__.py  aegis.py  base.py  export_control.py  mslearn.py
src/models/: __init__.py  book.py  exceptions.py  query.py
src/parsers/: __init__.py  base.py  chunker.py  docling_parser.py  epub_parser.py  factory.py  html_parser.py  markdown_parser.py  pdf_parser.py  rst_parser.py  text_parser.py  validator.py
src/services/: __init__.py  ingestion_service.py  query_service.py  session_manager.py
src/vectorstore/: __init__.py  chroma_store.py
tests/: conftest.py
tests/api/: conftest.py  test_books.py  test_chat.py  test_chat_stream.py  test_health.py
tests/integration/: test_vector_pipeline.py
tests/integration/llm/: __init__.py  test_ollama_integration.py
tests/unit/application/: test_ingestion_service.py  test_query_service.py  test_session_manager.py
tests/unit/domain/: test_entities.py  test_exceptions.py
tests/unit/infrastructure/embeddings/: test_sentence_transformer.py
tests/unit/infrastructure/llm/: test_ollama_client.py  test_prompts.py
tests/unit/infrastructure/parsers/: test_chunker.py  test_docling_parser.py  test_html_parser.py  test_markdown_parser.py  test_pdf_parser.py  test_rst_parser.py  test_text_parser.py  test_validator.py
tests/unit/infrastructure/vectorstore/: test_chroma_store.py
tests/unit/mcp/: __init__.py  test_aegis_client.py
tests/unit/mcp/adapters/: __init__.py  test_export_control.py
