[project]
name = "localbookchat"
version = "0.1.0"
description = "Local eBook RAG application"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.32.0,<0.33.0",
    "chromadb>=0.5.0,<0.6.0",
    "sentence-transformers>=3.0.0,<4.0.0",
    "ollama>=0.4.0,<0.5.0",
    "pypdf>=5.0.0,<6.0.0",
    "ebooklib>=0.18,<0.19",
    "pydantic-settings>=2.6.0,<3.0.0",
    "python-multipart>=0.0.12,<0.1.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "lxml>=5.0.0,<6.0.0",
    "mcp>=1.0.0",
    # Security: minimum versions to address CVEs
    "aiohttp>=3.12.0",  # CVE-2025-32697, CVE-2025-49088, CVE-2025-53354
    "certifi>=2025.12.17",  # CVE-2025-43859
    "urllib3>=2.6.3",  # CVE-2025-66418, CVE-2025-66471, CVE-2026-21441, CVE-2025-50180
    "requests>=2.32.5",  # CVE-2025-47977
    # Note: tqdm 4.70.0+, werkzeug 3.1.4+, transformers 4.53.0+ fixes don't exist yet
    # Monitor for updates to address remaining CVEs
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "black>=24.0.0",
    "fpdf2>=2.7.0",
]
enhanced = [
    "docling>=2.0.0",
]
security = [
    "bandit>=1.7.5",  # Security linting
    "safety>=2.3.5",  # Dependency vulnerability scanning
    "pip-audit>=2.6.0",  # Audit dependencies for vulnerabilities
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
markers = [
    "integration: integration tests requiring external services",
    "slow: tests that take a long time to run",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.black]
line-length = 100
target-version = ["py310"]
