[project]
name = "localbookchat"
version = "0.1.0"
description = "Local eBook RAG application"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.0",  # Requires starlette>=0.49.1 for security fixes
    "uvicorn[standard]>=0.32.0,<0.33.0",
    "chromadb>=0.5.0,<0.6.0",
    "sentence-transformers>=3.0.0,<4.0.0",
    "ollama>=0.4.0,<0.5.0",
    "pypdf>=6.6.0,<7.0.0",  # CVE-2025-55197, CVE-2025-62707, CVE-2025-62708, CVE-2025-66019
    "ebooklib>=0.18,<0.19",
    "pydantic-settings>=2.6.0,<3.0.0",
    "python-multipart>=0.0.12,<0.1.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "lxml>=5.0.0,<6.0.0",
    "mcp>=1.0.0",
    # Security: minimum versions to address CVEs
    "aiohttp>=3.12.0",  # CVE-2025-32697, CVE-2025-49088, CVE-2025-53354
    "certifi>=2025.12.17",  # CVE-2025-43859
    "urllib3>=2.6.3",  # CVE-2025-66418, CVE-2025-66471, CVE-2026-21441, CVE-2025-50180
    "requests>=2.32.5",  # CVE-2025-47977
    "starlette>=0.49.1",  # CVE-2025-54121, CVE-2025-62727
    "filelock>=3.20.1",  # CVE-2025-68146
    "fonttools>=4.60.2",  # CVE-2025-66034
    "transformers>=4.53.0",  # Multiple CVEs (ReDoS, deserialization)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "bandit[toml]>=1.7.5",
    "pip-audit>=2.6.0",
    "fpdf2>=2.7.0",
]
enhanced = [
    "docling>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = "test_*.py"
python_functions = "test_*"
markers = [
    "integration: integration tests requiring external services",
    "slow: tests that take a long time to run",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "S",      # flake8-bandit
    "T20",    # flake8-print
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",    # Line too long - handled by formatter
    "SIM105",  # contextlib.suppress - optional style preference
    "SIM108",  # Ternary operator - not always more readable
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["tests", ".venv"]

[[tool.mypy.overrides]]
module = [
    "docling.*",
    "ebooklib.*",
    "ollama.*",
    "sentence_transformers.*",
    "chromadb.*",
    "bs4.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
